--- a/src/components/diary-entry/diary-entry.html
+++ b/src/components/diary-entry/diary-entry.html
@@ -1,48 +1,57 @@
+<div *ngIf="mealInput">
 
-<ion-card>
+  <ion-card>
 
-  <ion-card-header>
-    Desayuno
-  </ion-card-header>
+    <ion-card-header>
+      {{ meal }}
+    </ion-card-header>
 
-  <ion-slides pager [options]="mySlideOptions">
-    <ion-slide *ngFor="let slide of slides">
-      <img [src]="slide.image" class="slide-image"/>
-    </ion-slide>
-  </ion-slides>
+    <div *ngIf="mealInput[meal]?.images">
+      <ion-slides pager [options]="mySlideOptions">
+        <ion-slide *ngFor="let image of mealInput[meal].images">
+          <img [src]="image.localPath" class="slide-image"/>
+        </ion-slide>
+      </ion-slides>
+    </div>
 
-  <ion-fab class="addPicture">
-    <button ion-fab mini (click)="addPicture()">
-      <ion-icon name="add"></ion-icon>
-    </button>
-  </ion-fab>
 
-  <ion-card-content>
-    Estuvo muy bueno!
-  </ion-card-content>
+    <img *ngIf="!mealInput[meal]?.images" src="./assets/images/desayuno.jpg"/>
 
-  <ion-row>
-   <ion-col center text-center>
-     <span icon-left small color="secondary" class="okIcon">
-       <ion-icon name="checkmark-circle"></ion-icon>
-     </span>
-     <span icon-left small class="wrongIcon">
-       <ion-icon name="close-circle"></ion-icon>
-     </span>
-   </ion-col>
-   <ion-col>
-     <button ion-button icon-left clear small>
-       <ion-icon name="text"></ion-icon>
-       <div>2 comentarios</div>
-     </button>
-   </ion-col>
-   <ion-col center text-center>
-     <ion-note>
-       11h ago
-     </ion-note>
-   </ion-col>
- </ion-row>
+    <ion-fab class="addPicture">
+      <button ion-fab mini (click)="addPicture()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-fab>
 
-</ion-card>
+    <ion-card-content (click)="addText()">
+      <span *ngIf="mealInput[meal]">{{ mealInput[meal].text }}</span>
+      <span *ngIf="!mealInput[meal]">¿Que comiste?</span>
+    </ion-card-content>
 
-<p>{{day}}</p>
+    <ion-row>
+     <ion-col center text-center>
+       <span icon-left small ion-text color="secondary" class="okIcon">
+         <ion-icon name="checkmark-circle"></ion-icon>
+       </span>
+       <span icon-left small class="wrongIcon">
+         <ion-icon name="close-circle"></ion-icon>
+       </span>
+     </ion-col>
+     <ion-col>
+       <button ion-button icon-left clear small>
+         <ion-icon name="text"></ion-icon>
+         <div>2 comentarios</div>
+       </button>
+     </ion-col>
+     <ion-col center text-center>
+       <ion-note>
+         11h ago
+       </ion-note>
+     </ion-col>
+   </ion-row>
+
+  </ion-card>
+
+</div>
+
+<!-- <p>{{day}}</p>  -->
