--- a/src/components/diary-entry/diary-entry.scss
+++ b/src/components/diary-entry/diary-entry.scss
@@ -9,9 +9,30 @@ diary-entry {
   //   right: 2%;
   // }
 
-  ion-fab {
-    top: 57%;
+  .slides {
+    position: relative;
+  }
+
+  .addPicture {
+    position: absolute;
+    z-index: 999;
+    bottom: 2%;
     right: 2%;
+  }
+
+  .newMeal {
+    height:20vh;
+    background-color: #f8f8f8;
+    position: relative;
+    text-align: center;
+  }
+
+  .camera {
+    position: absolute;
+    top: 20%;
+    font-size: 8vh;
+    width: 100%;
+    color: #fff;
   }
 
   .wrongIcon {
