Anda las reviews y gran parte del detalle de las comidas

--- a/src/pages/diary/diary-entry/diary-entry.scss
+++ b/src/pages/diary/diary-entry/diary-entry.scss
@@ -35,6 +35,15 @@ diary-entry {
     color: #fff;
   }
 
+  .onlyText {
+    position: absolute;
+    top: 42%;
+    font-size: 8vh;
+    width: 100%;
+    color: #fff;
+    padding: 1vh;
+  }
+
   .wrongIcon {
     color: lightgrey
   }
