pensando en actualizar y hacer unos cambios importantes en como se cargan las fotos

--- a/src/pages/diary/week-calendar/week-calendar.scss
+++ b/src/pages/diary/week-calendar/week-calendar.scss
@@ -4,12 +4,13 @@ week-calendar {
     text-align: center;
   }
 
-  // button {
-  //   text-align: center;
-  //   background-color: transparent;
-  //   display: block;
-  //   width: 100%;
-  // }
+  .days {
+    padding: 0px;
+    margin: 0px;
+    color: black;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+  }
 
   ion-row {
     border-style: solid;
